--- a/index.html
+++ b/index.html
@@ -197,6 +197,6 @@
       </section>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/production.min.js"></script>
+    <script src="js/build/production.min.js"></script>
   </body>
   </html>
