Added new job on Planeta huerto

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     <article class="o-wrapper">
       <h2 class="c-block__tag">Work experience</h2>
       <section class="c-block__unit">
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.planetahuerto.es/" target="_blank">Planeta Huerto</a></h2>
+        <p class="c-block__unit__time o-parag">Nov 2016 - Today</p>
+        <div class="c-block__unit__descrip o-parag">
+          <p>I recently joined Planeta Huerto, a young but leading ecommerce on ecological and sustainable products in Spain.</p>
+          <p>My main tasks will be defining a recognizable and solid graphic identity, improving the look and usability of the website and developing a CSS strategy, logic and maintainable over time.</p>
+        </div>
+      </section>
+      <section class="c-block__unit">
         <h2 class="c-block__unit__title o-subtitle"><a href="http://themeschest.com" target="_blank">Themes Chest</a></h2>
         <p class="c-block__unit__time o-parag">Jan 2016 - Today</p>
         <div class="c-block__unit__descrip o-parag">
