Added links to Medium profile and other minor updates

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="c-header__descrip__link-group">
           <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-header__descrip__link o-inlineb-link">Linkedin profile</a>
           <a href="mailto:rsanchezaliaga@gmail.com" class="c-header__descrip__link o-inlineb-link">Email me</a>
+          <a href="https://medium.com/@ricardoaliaga" class="c-header__descrip__link o-inlineb-link" target="_blank">Blog</a>
         </div>
       </section>
     </article>
@@ -168,6 +169,7 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>Sass</li>
+          <li>PostCSS</li>
           <li>jQuery</li>
         </ul>
       </section>
@@ -175,10 +177,10 @@
         <h2 class="c-block__tags__title o-parag">Software</h2>
         <ul class="c-block__tags__group u-inlineb-gap">
           <li>Sketch</li>
-          <li>Atom</li>
+          <li>Figma</li>
+          <li>Visual Studio Code</li>
           <li>Illustrator</li>
           <li>Photoshop</li>
-          <li>Indesign</li>
         </ul>
       </section>
       <section class="c-block__tags">
@@ -197,6 +199,7 @@
       <div class="c-footer__links o-parag">
         <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-footer__links__link o-inlineb-link">Linkedin profile</a>
         <a href="mailto:rsanchezaliaga@gmail.com" class="c-footer__links__link o-inlineb-link">Email me</a>
+        <a href="https://medium.com/@ricardoaliaga" target="_blank" class="c-footer__links__link o-inlineb-link">Blog</a>
       </div>
       <p class="c-footer__credit o-parag">Ricardo Sánchez Aliaga &copy; <span class="js-current-year"></span><br>
         All rights reserved</p>
