--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ricardo Sánchez Aliaga | Digital designer</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-931HH37FT9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-931HH37FT9');
+  </script>
+  <title>Ricardo Sánchez Aliaga | Senior UX Designer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#448aff">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+  <meta name="description" content="Senior UX Designer | Crafting Intuitive Digital Experiences | User Research & Interaction Design">
   <link rel="stylesheet" href="css/styles.css">
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-84076803-1', 'auto');
-  ga('send', 'pageview');
-  </script>
 </head>
 <body>
   <div class="o-region">
     <article class="c-header o-wrapper">
       <header>
         <h2 class="c-header__name o-subtitle">Ricardo Sánchez Aliaga</h2>
-        <h1 class="c-header__title o-title">Digital designer</h1>
+        <h1 class="c-header__title o-title">Senior UX Designer</h1>
       </header>
-      <section class="c-header__descrip o-parag">
-        <p>I'm a graphic designer who enjoys, not only designing, but breathing life to my designs through a bit of code. Here's a brief on my career so far.</p>
-        <div class="c-header__descrip__link-group">
-          <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-header__descrip__link o-inlineb-link">Linkedin profile</a>
-          <a href="mailto:rsanchezaliaga@gmail.com" class="c-header__descrip__link o-inlineb-link">Email me</a>
+      <section class="c-header__descrip">
+        <p class="o-parag">As an enthusiast of design and technology, I feel fortunate to blend both disciplines in crafting digital experiences carefully tailored to cater user needs.</p>
+        <div class="c-header__descrip__link-group o-parag">
+          <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-header__descrip__link o-inlineb-link">LinkedIn</a>
           <a href="https://medium.com/@ricardoaliaga" class="c-header__descrip__link o-inlineb-link" target="_blank">Blog</a>
         </div>
       </section>
@@ -44,19 +43,27 @@
     <article class="o-wrapper">
       <h2 class="c-block__tag">Work experience</h2>
       <section class="c-block__unit">
-        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.planetahuerto.es/" target="_blank">Planeta Huerto</a></h2>
-        <p class="c-block__unit__time o-parag">Nov 2016 - Today</p>
-        <div class="c-block__unit__descrip o-parag">
-          <p>I recently joined Planeta Huerto, a young but leading ecommerce on ecological and sustainable products in Spain.</p>
-          <p>My main tasks will be defining a recognizable and solid graphic identity, improving the look and usability of the website and developing a CSS strategy, logic and maintainable over time.</p>
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.lansweeper.com" target="_blank">Lansweeper</a> · Senior UX Designer</h2>
+        <p class="c-block__unit__time o-parag">June 2019 - Present</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">At Lansweeper, I've consolidated my role as a UX Designer, leading the end-to-end design process for a SaaS solution, tailored to cater IT professionals needs in discovering and managing their digital assets.</p>
+          <p class="o-parag">Lansweeper is the industry's leading IT tool, with clients such as IBM, Sony, Nintendo, Intel, or Nasa.</p>
         </div>
       </section>
       <section class="c-block__unit">
-        <h2 class="c-block__unit__title o-subtitle"><a href="http://themeschest.com" target="_blank">Themes Chest</a></h2>
-        <p class="c-block__unit__time o-parag">Jan 2016 - Today</p>
-        <div class="c-block__unit__descrip o-parag">
-          <p>I've applied my skills on design and code to develop several Tumblr themes on a project called Themes Chest. They've been installed thousands of times a month since the project started.</p>
-          <p>After 4 years working in <a class="js-smsdata" href="#smsdata">SmsData</a> I decided to quit my job and take a career break. I've been spending much of that time developing this project as a pretext to hone my skills, both graphical and technical.</p>
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.planetahuerto.es" target="_blank">Planeta Huerto</a> · UX/UI Designer and CSS</h2>
+        <p class="c-block__unit__time o-parag">Nov 2016 - 2019 (2 years and 8 months)</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">My primary focus was to enhance the overall user experience, with special attention to mobile devices, through implementing a robust design system and an aesthetically pleasing interface. Additionally, I meticulously managed the CSS architecture to ensure a scalable and efficient stylesheet.</p>
+          <p class="o-parag">Planeta Huerto, part of the Carrefour group, is the leading e-commerce platform for organic and sustainable products in Spain and Portugal.</p>
+        </div>
+      </section>
+      <section class="c-block__unit">
+        <h2 class="c-block__unit__title o-subtitle"><a href="http://themeschest.com" target="_blank">Themes Chest</a> · Founder</h2>
+        <p class="c-block__unit__time o-parag">Jan 2016 - Nov 2016 (11 months)</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">I applied my design and coding skills to develop several Tumblr themes for a project called Themes Chest. Since its inception, they have been installed thousands of times.</p>
+          <p class="o-parag">After 4 years at SmsData, I decided to leave my job and take a career break. During this time, I focused on developing this project as a pretext to refine both my graphic and technical abilities.</p>
         </div>
         <figure class="c-block__unit__img-group">
           <div class="js-black-lead c-block__unit__img-frame">
@@ -76,17 +83,11 @@
           </div>
         </figure>
       </section>
-      <section id="smsdata" class="c-block__unit">
-        <h2 class="c-block__unit__title o-subtitle">SmsData</h2>
+      <section class="c-block__unit">
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.smsdata.com" target="_blank">SmsData</a> · Web Designer</h2>
         <p class="c-block__unit__time o-parag">Nov 2011 - Oct 2015 (4 years)</p>
-        <div class="c-block__unit__descrip o-parag">
-          <p>On SmsData I've carried out a wide range of tasks required by the workflow on design and advertising:</p>
-          <ul>
-            <li>Design, layout and prototyping of responsive webpages.</li>
-            <li>Animations development and its management on Youtube platform.</li>
-            <li>Ideation, design and management of newsletters.</li>
-            <li>Advertising design, both digital and print.</li>
-          </ul>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">During my time at SmsData, I skillfully tackled a broad spectrum of tasks, encompassing web design, motion graphics, and digital/print advertising.</p>
         </div>
         <figure class="c-block__unit__img-group">
           <a class="js-popup-video c-block__unit__img-frame" href="https://www.youtube.com/watch?v=sUcRgH8264E">
@@ -106,10 +107,10 @@
         </figure>
       </section>
       <section class="c-block__unit">
-        <h2 class="c-block__unit__title o-subtitle">Cyma Métodos y Medios</h2>
-        <p class="c-block__unit__time o-parag">Jan 2011 - Apr 2011</p>
-        <div class="c-block__unit__descrip o-parag">
-          <p>On my first contact with the labour world, I devoted mainly to develop print advertising media.</p>
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.grupocyma.es" target="_blank">Cyma Métodos y Medios</a> · Graphic Designer</h2>
+        <p class="c-block__unit__time o-parag">Jan 2011 - Apr 2011 (4 months)</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">In my first contact with the labor market as a graphic designer, I devoted mainly to the development of advertising media in printed format.</p>
         </div>
       </section>
     </article>
@@ -118,10 +119,25 @@
     <article class="o-wrapper">
       <h2 class="c-block__tag">Education</h2>
       <section class="c-block__unit">
-        <h2 class="c-block__unit__title o-subtitle">School of Art and Design in Alicante</h2>
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.uxlearn.com" target="_blank">UX Learn</a> · Advanced Research Specialization Diploma</h2>
+        <p class="c-block__unit__time o-parag">Apr 2022 - Jun 2022 (3 months)</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">With a genuine interest in user research, I opted for a 3-month course led by Torres Burriel, a prominent institution in Spain known for its expertise in the field. This enriching experience is bound to deepen my knowledge and enhance my skills in user-centric design.</p>
+        </div>
+      </section>
+      <section class="c-block__unit">
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://www.unir.net/diseno/master-experiencia-usuario/" target="_blank">Unir</a> · Official Master's Degree in User Experience Design (UX)</h2>
+        <p class="c-block__unit__time o-parag">Nov 2019 - Nov 2020 (1 year)</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">In tandem with my professional pursuits, I undertook an official online master's degree to bolster and validate my expertise in the dynamic realm of user experience. This dedicated effort not only reinforced my knowledge but also attested to my commitment to excellence in the field.</p>
+          <p class="o-parag">Final master's project: <a href="https://medium.com/@ricardoaliaga/mobile-app-proposal-for-accessing-unirs-virtual-campus-308aa813fefc" target="_blank">Case study (Medium)</a> · <a href="https://reunir.unir.net/bitstream/handle/123456789/10874/SANCHEZ%20ALIAGA%2c%20RICARDO.pdf?sequence=1&isAllowed=y" target="_blank">Full project (PDF)</a></p>
+        </div>
+      </section>
+      <section class="c-block__unit">
+        <h2 class="c-block__unit__title o-subtitle"><a href="https://easda.es" target="_blank">EASDA</a> · Graphic Design Degree</h2>
         <p class="c-block__unit__time o-parag">2007 - 2011 (Final Degree Project 2014 - 2015)</p>
-        <div class="c-block__unit__descrip o-parag">
-          <p>I got my degree in design at the School of Art and Design in Alicante. During my years in school, we treat all facets and specialties of graphic design.</p>
+        <div class="c-block__unit__descrip">
+          <p class="o-parag">I graduated from the School of Art and Design in Alicante, where I had the opportunity to explore a wide range of graphic design facets and specialties. It was a rewarding academic experience that equipped me with diverse skills and a genuine passion for creativity.</p>
         </div>
         <figure class="c-block__unit__img-group">
           <div class="js-popup-school c-block__unit__img-frame" href="">
@@ -147,49 +163,48 @@
   <div id="skills" class="o-region o-region--light-bg">
     <article class="o-wrapper">
       <h2 class="c-block__tag">Skills</h2>
-      <div class="c-block__tags-intro o-parag">
-        <p>Along my career as a designer I've been acquiring a range of skills and learning about technologies which are essential on my daily routine.</p>
+      <div class="c-block__tags-intro">
+        <p class="o-parag">Throughout my career, I have taken on a variety of roles and acquired a diverse range of skills, tools and methodologies. The combination of these may vary over time, but my eagerness to learn remains the same.</p>
+        <p class="o-parag">As a UX designer, these are the ones I currently use the most.</p>
       </div>
       <section class="c-block__tags">
-        <h2 class="c-block__tags__title o-parag">Specialities</h2>
+        <h2 class="c-block__tags__title o-parag">Expertise</h2>
         <ul class="c-block__tags__group u-inlineb-gap">
-          <li>UI</li>
-          <li>UX</li>
-          <li>Responsive Web Design</li>
+          <li>User Experience (UX)</li>
+          <li>User Interface (UI)</li>
+          <li>User Experience Research (UXR)</li>
           <li>Prototyping</li>
-          <li>Illustration</li>
-          <li>Branding</li>
-          <li>Newsletter</li>
-          <li>Motion graphics</li>
-        </ul>
-      </section>
-      <section class="c-block__tags">
-        <h2 class="c-block__tags__title o-parag">Technologies</h2>
-        <ul class="c-block__tags__group u-inlineb-gap">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Sass</li>
-          <li>PostCSS</li>
-          <li>jQuery</li>
-        </ul>
-      </section>
-      <section class="c-block__tags">
-        <h2 class="c-block__tags__title o-parag">Software</h2>
-        <ul class="c-block__tags__group u-inlineb-gap">
-          <li>Sketch</li>
-          <li>Figma</li>
-          <li>Visual Studio Code</li>
-          <li>Illustrator</li>
-          <li>Photoshop</li>
+          <li>Information Architecture (IA)</li>
+          <li>Accessibility</li>
+          <li>Design Systems</li>
         </ul>
       </section>
       <section class="c-block__tags">
         <h2 class="c-block__tags__title o-parag">Tools</h2>
         <ul class="c-block__tags__group u-inlineb-gap">
-          <li>Marvel</li>
-          <li>Grunt</li>
-          <li>Git</li>
-          <li>Mailchimp</li>
+          <li>Figma</li>
+          <li>Dovetail</li>
+          <li>Calendly</li>
+          <li>Zoom</li>
+          <li>User Interviews</li>
+          <li>Typeform</li>
+        </ul>
+      </section>
+      <section class="c-block__tags">
+        <h2 class="c-block__tags__title o-parag">Languages</h2>
+        <ul class="c-block__tags__group u-inlineb-gap">
+          <li>Spanish (Native)</li>
+          <li>English (Proficient)</li>
+        </ul>
+      </section>
+      <section class="c-block__tags">
+        <h2 class="c-block__tags__title o-parag">Other</h2>
+        <ul class="c-block__tags__group u-inlineb-gap">
+          <li>Confluence</li>
+          <li>Jira</li>
+          <li>ChatGPT</li>
+          <li>HTML</li>
+          <li>CSS</li>
         </ul>
       </section>
     </article>
@@ -197,8 +212,7 @@
   <footer class="c-footer o-region o-region--dark-bg">
     <section class="o-wrapper">
       <div class="c-footer__links o-parag">
-        <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-footer__links__link o-inlineb-link">Linkedin profile</a>
-        <a href="mailto:rsanchezaliaga@gmail.com" class="c-footer__links__link o-inlineb-link">Email me</a>
+        <a href="https://es.linkedin.com/in/ricardoaliaga" target="_blank" class="c-footer__links__link o-inlineb-link">LinkedIn</a>
         <a href="https://medium.com/@ricardoaliaga" target="_blank" class="c-footer__links__link o-inlineb-link">Blog</a>
       </div>
       <p class="c-footer__credit o-parag">Ricardo Sánchez Aliaga &copy; <span class="js-current-year"></span><br>
